--- a/src/options/options.html
+++ b/src/options/options.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Challenge Preferences</title>
   <link rel="stylesheet" href="options.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.18/dist/css/bootstrap-select.min.css">
   <% if (NODE_ENV === 'development') { %>
   <!-- Load some resources only in development environment -->
   <% } %>
