--- a/src/options/options.html
+++ b/src/options/options.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Challenge Preferences</title>
-  <link rel="stylesheet" href="options.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.18/dist/css/bootstrap-select.min.css">
-  <% if (NODE_ENV === 'development') { %>
-  <!-- Load some resources only in development environment -->
-  <% } %>
-</head>
-<body>
-  <div id="app"></div>
-  <script src="options.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Challenge Preferences</title>
+    <link rel="stylesheet" href="options.css" />
+    <% if (NODE_ENV === 'development') { %>
+    <!-- Load some resources only in development environment -->
+    <% } %>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script src="options.js"></script>
+  </body>
 </html>
